--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
       </div>
       <span class="fa fa-bars menu-icon"></span>
+    <div class="signup-modal-wrapper">
+    <!-- 新規登録用のモーダル部分を表示してください -->
+      <div class="modal">
+        <div id="signup-form">
+          <h2>Emailで新規登録</h2>
+          <form action="#">
+            <input class="form-control" type="text" placeholder="メールアドレス">
+            <input class="form-control" type="password" placeholder="パスワード">
+           <div id="submit-btn">新規登録</div>
+          </form>
+        </div>
+      </div>
+    
+  </div>
       <div class="header-right">
         <a href="#">レッスン</a>
         <a href="#">新規登録</a>
